Add WWW-Authenticate Support
As mandated by oauth 2.1 we should include the WWW-Authenticate header
should be returned by protected endpoints when authentication fails.
Further to that RFC9828 specifies a protected resource metadata endpoint
that can be used to discover compatible authorization services.  All in
all this enables all our services to be used with MCP.
